[package]
name = "akasa-core"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5"
dashmap = "5.5"
flume = { version = "0.11", features = ["async"] }
futures-io = "0.3"
futures-lite = "2.2"
hashbrown = "0.14"
hex = { version = "0.4", features = ["serde"] }
log = "0.4"
mqtt-proto = { git = "https://github.com/diablur/mqtt-proto.git", branch = "crates" }
num_cpus = "1.16"
parking_lot = "0.12"
cfg-if = "1"
# rhai = { version = "1.11.0", features = ["decimal"] }
# jsonwebtoken = "8.2.0"
# jwt-simple = "0.11.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
tokio-openssl = "0.6"
uuid = { version = "1.6", features = ["v4"] }
rand = { version = "0.8", features = ["getrandom"] }
ahash = "0.8"
scram = "0.6"
pin-project-lite = "0.2"
futures-sink = "0.3"
futures-util = "0.3"
base64 = "0.21"
ring = "0.17"
crc32c = "0.6"
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
futures-sink = "0.3"
tokio-util = "0.7"
env_logger = "0.10"
