[package]
name = "akasa"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akasa-core = { version = "0.1.1", path = "../akasa-core" }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde_yaml = "0.9"
env_logger = "0.10"
log = "0.4"
dashmap = "5.5"
rpassword = "7.3"
rand = { version = "0.8", features = ["getrandom"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.5", optional = true }

[features]
default = ["jemalloc"]
jemalloc = ["tikv-jemallocator"]
